--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,10 +33,10 @@
     <h2>Diamond Price Predictor 💎</h2>
 
     <label for="carat">Carat:</label>
-    <input type="number" step="0.01" id="carat" />
+    <input type="number" step="0.01" id="carat" required />
 
     <label for="cut">Cut:</label>
-    <select id="cut">
+    <select id="cut" required>
         <option value="Fair">Fair</option>
         <option value="Good">Good</option>
         <option value="Very Good">Very Good</option>
@@ -45,7 +45,7 @@
     </select>
 
     <label for="color">Color:</label>
-    <select id="color">
+    <select id="color" required>
         <option value="J">J</option>
         <option value="I">I</option>
         <option value="H">H</option>
@@ -56,7 +56,7 @@
     </select>
 
     <label for="clarity">Clarity:</label>
-    <select id="clarity">
+    <select id="clarity" required>
         <option value="I1">I1</option>
         <option value="SI2">SI2</option>
         <option value="SI1">SI1</option>
@@ -68,10 +68,10 @@
     </select>
 
     <label for="depth">Depth:</label>
-    <input type="number" step="0.1" id="depth" />
+    <input type="number" step="0.1" id="depth" required />
 
     <label for="table">Table:</label>
-    <input type="number" step="0.1" id="table" />
+    <input type="number" step="0.1" id="table" required />
 
     <button onclick="predictPrice()">Predict Price</button>
 
@@ -89,7 +89,7 @@
             };
 
             try {
-                const response = await fetch("http://127.0.0.1:5000/predict", {
+                const response = await fetch("http://127.0.0.1:2000/predict", {
                     method: "POST",
                     headers: {
                         "Content-Type": "application/json"
@@ -98,13 +98,14 @@
                 });
 
                 const data = await response.json();
+
                 if (data.prediction !== undefined) {
-                    document.getElementById("result").innerText = `Predicted Price: $${data.prediction.toFixed(2)}`;
+                    document.getElementById("result").innerText = `Predicted Price in doller $ : ${data.prediction.toFixed(2)}`;
                 } else {
-                    document.getElementById("result").innerText = `Error: ${data.error}`;
+                    document.getElementById("result").innerText = ` Error: ${data.error || 'Unknown error'}`;
                 }
             } catch (error) {
-                document.getElementById("result").innerText = "API call failed.";
+                document.getElementById("result").innerText = " API call failed.";
                 console.error(error);
             }
         }
